--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,14 +4,7 @@ spring:
       client:
         registration:
           google:
-            client-id: <client_id>
-            client-secret: <client_secret>
+            client-id: <client-id>
+            client-secret: <client-secret>
             scope: openid, profile, email
-            redirect-uri: "{baseUrl}/login/oauth2/code/google"
-            authorization-grant-type: authorization_code
-        provider:
-          google:
-            authorization-uri: https://accounts.google.com/o/oauth2/v2/auth
-            token-uri: https://oauth2.googleapis.com/token
-            user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
-            user-name-attribute: sub
+
